--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -1,16 +1,31 @@
 <html>
 	<head>
 		<title>To-Do lists</title>
+		<meta name="viewport" content="width=defice-width, initial-scale=1.0" >
+		<link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen" >
 	</head>
 	<body>
-		<h1>{% block header_text %}{% endblock %}</h1>
+		<div class="container">
+			<div class="row" >
+				<div class="col-md-6 col-md-offset-3 jumbotron" >
+					<div class="text-center" >
+						<h1>{% block header_text %}{% endblock %}</h1>
 		
-		<form method="POST" action="{% block form_action %}{% endblock %}">
-			<input name="item_text" id="id_new-item" placeholder="Enter a to-do item"/>
-			{% csrf_token %}
-		</form>
-		
-		{% block table %}
-		{% endblock %}
+						<form method="POST" action="{% block form_action %}{% endblock %}" >
+							<input 
+								name="item_text"
+								class="form-control input-lg"
+								id="id_new-item" 
+								placeholder="Enter a to-do item" 
+								/>
+							{% csrf_token %}
+						</form>
+					
+					</div>
+					{% block table %}
+					{% endblock %}
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
