clean up and implement validation functional test

--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -16,7 +16,7 @@
 							<input 
 								name="item_text"
 								class="form-control input-lg"
-								id="id_new-item" 
+								id="id_new_item" 
 								placeholder="Enter a to-do item" 
 								/>
 							{% csrf_token %}
