--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -17,9 +17,9 @@
 
 							{% csrf_token %}
 							
-							{% if error %}
+							{% if form.errors %}
 								<div class="form-group has-error" >
-									<span class='help-block'>{{ error }}</span>
+									<span class='help-block'>{{ form.text.errors }}</span>
 								</div>
 							{% endif %} 
 						</form>
